# catfleet

./: .gitignore  Cargo.toml  flake.nix
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  schema.d.ts
frontend/src/components/: Status.tsx
src/: main.rs
src/client/: base_url.rs  extra_headers.rs  inner.rs  limit.rs  mod.rs
src/client/middleware/: limit.rs  mod.rs
src/model/: mod.rs
src/server/: mod.rs
