[package]
name = "catfleet"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.11" , default-features = false, features = [ "http2", "charset", "rustls-tls", "json" ] }
tokio = { version = "1.42.0", features = [ "full" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
anyhow = "1.0.95"
tower = { version = "0.5.2", features = [ "limit" ] }
tower-http = { version = "0.6.2", features = [ "auth" ] }
