[package]
name = "catfleet"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Linda Siemons <linda@catbrained.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = [ "full" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
anyhow = "1.0.95"
tower = { version = "0.5.2", features = [ "util", "limit" ] }
tower-service = "0.3.3"
tower-layer = "0.3.3"
tower-http = { version = "0.6.2", features = [ "auth" ] }
hyper = { version = "1.5.2", features = [ "client", "http1", "http2" ] }
hyper-util = { version = "0.1.10", features = [ "tokio" ] }
http-body-util = "0.1.2"
tokio-rustls = { version = "0.26.1", default-features = false, features = [ "ring" ] }
webpki-roots = "0.26.7"
axum = { version = "0.8.1", features = [ "http2" ] }

[dev-dependencies]
tokio-test = "0.4.4"
tower-test = "0.4.0"
